test/compile-fail/resolution/use/nested-private-public-struct/expected.txt
error: mod `b` is private
 --> top.rhdl:7:7
  |
7 | use a::b::c;
  |        ^ private mod
